# kayhut-exercise

./: .gitignore  CMakeLists.txt  Makefile  Readme.md  build.sh  justfile  main.cpp
Client/: CMakeLists.txt  Makefile
Client/include/: Client.h
Client/src/: Client.cpp  main.cpp
Server/: CMakeLists.txt  Makefile
Server/include/: Server.h  Session.h
Server/src/: Server.cpp  Session.cpp  main.cpp
dev/: builder.Dockerfile  builder.yml  client_runner.Dockerfile  openssl.conf  runner.Dockerfile  server_runner.Dockerfile
dev/keys/ca/: ca.crt  ca.key
dev/keys/client/: client.crt  client.csr  client.key
dev/keys/server/: server.crt  server.csr  server.key
